# swarmdo

./: .gitignore  .npmrc  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  NOTICE  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml
v3/crates/rufvector/crates/rufvector-collections/: Cargo.toml  README.md
v3/crates/rufvector/crates/rufvector-collections/benches/: primality.rs
v3/crates/rufvector/crates/rufvector-collections/src/: collection.rs  error.rs  lib.rs  manager.rs  primality.rs
v3/crates/rufvector/crates/rufvector-collections/tests/: primality_pseudoprimes.rs  table_cross_check.rs
v3/crates/rufvector/crates/rufvector-filter/: Cargo.toml  README.md
v3/crates/rufvector/crates/rufvector-filter/src/: lib.rs
v3/crates/rufvector/crates/rufvector-metrics/: Cargo.toml  README.md
v3/crates/rufvector/crates/rufvector-metrics/src/: lib.rs
v3/crates/rvf/: Cargo.toml
v3/crates/rvf/rvf-index/: Cargo.toml  README.md
v3/crates/rvf/rvf-index/src/: lib.rs
v3/crates/rvf/rvf-node/: Cargo.toml  README.md  build.rs  package.json
v3/crates/rvf/rvf-node/npm/darwin-arm64/: README.md  package.json
v3/crates/rvf/rvf-node/npm/darwin-x64/: README.md  package.json
v3/crates/rvf/rvf-node/npm/linux-arm64-gnu/: README.md  package.json
v3/crates/rvf/rvf-node/npm/linux-x64-gnu/: README.md  package.json
v3/crates/rvf/rvf-node/npm/win32-x64-msvc/: README.md  package.json
v3/crates/rvf/rvf-node/src/: lib.rs
v3/crates/rvf/rvf-quant/: Cargo.toml  README.md
v3/crates/rvf/rvf-quant/src/: lib.rs
v3/crates/rvf/rvf-runtime/: Cargo.toml  README.md
v3/crates/rvf/rvf-runtime/examples/: qr_seed_bootstrap.rs
v3/crates/rvf/rvf-runtime/src/: agi_container.rs  lib.rs
v3/crates/rvf/rvf-runtime/tests/: agi_e2e.rs
v3/crates/rvf/rvf-types/: Cargo.toml  README.md
v3/crates/rvf/rvf-types/src/: agi_container.rs  lib.rs  qr_seed.rs  witness.rs
v3/crates/swarmvector/: Cargo.toml
v3/crates/swarmvector/.cargo/: config.toml
v3/crates/swarmvector/crates/sona/: Cargo.toml  README.md  WASM_COMPLETION_SUMMARY.md  build.rs
v3/crates/swarmvector/crates/sona/examples/: darwin_autotuner.rs  darwin_weightadapter.rs
v3/crates/swarmvector/crates/sona/src/: ewc.rs
v3/crates/swarmvector/crates/swarmvector-attention/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-attention-node/: Cargo.toml  README.md  package.json
v3/crates/swarmvector/crates/swarmvector-attention-node/src/: async_ops.rs  attention.rs  graph.rs  lib.rs  training.rs
v3/crates/swarmvector/crates/swarmvector-attention/benches/: attention_bench.rs
v3/crates/swarmvector/crates/swarmvector-attention/docs/: SDK_GUIDE.md
v3/crates/swarmvector/crates/swarmvector-attention/src/: error.rs  lib.rs
v3/crates/swarmvector/crates/swarmvector-cluster/: Cargo.toml
v3/crates/swarmvector/crates/swarmvector-collections/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-collections/benches/: primality.rs
v3/crates/swarmvector/crates/swarmvector-collections/src/: collection.rs  error.rs  lib.rs  manager.rs  primality.rs
v3/crates/swarmvector/crates/swarmvector-collections/tests/: primality_pseudoprimes.rs  table_cross_check.rs
v3/crates/swarmvector/crates/swarmvector-core/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-core/benches/: bench_memory.rs  bench_simd.rs  distance_metrics.rs  real_benchmark.rs
v3/crates/swarmvector/crates/swarmvector-core/docs/: EMBEDDINGS.md
v3/crates/swarmvector/crates/swarmvector-core/examples/: embeddings_example.rs  neon_benchmark.rs
v3/crates/swarmvector/crates/swarmvector-core/src/: agenticdb.rs  error.rs  integration.rs  lib.rs  memory.rs  quantization.rs  storage.rs
v3/crates/swarmvector/crates/swarmvector-core/tests/: concurrent_tests.rs  integration_tests.rs  property_tests.rs  test_simd_correctness.rs
v3/crates/swarmvector/crates/swarmvector-diskann-node/: Cargo.toml
v3/crates/swarmvector/crates/swarmvector-diskann-node/src/: lib.rs
v3/crates/swarmvector/crates/swarmvector-diskann/src/: lib.rs  reuse.rs
v3/crates/swarmvector/crates/swarmvector-filter/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-filter/src/: lib.rs
v3/crates/swarmvector/crates/swarmvector-gnn/: README.md
v3/crates/swarmvector/crates/swarmvector-gnn-node/: Cargo.toml  README.md  package.json
v3/crates/swarmvector/crates/swarmvector-gnn-node/examples/: basic.js
v3/crates/swarmvector/crates/swarmvector-gnn-node/src/: lib.rs
v3/crates/swarmvector/crates/swarmvector-gnn-node/test/: basic.test.js
v3/crates/swarmvector/crates/swarmvector-gnn/examples/: loss_demo.rs  triggered_rebuild.rs
v3/crates/swarmvector/crates/swarmvector-gnn/src/: error.rs  lib.rs  query.rs  training.rs
v3/crates/swarmvector/crates/swarmvector-graph/: ARCHITECTURE.md  Cargo.toml
v3/crates/swarmvector/crates/swarmvector-graph-node/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-graph-node/src/: lib.rs  types.rs
v3/crates/swarmvector/crates/swarmvector-graph-transformer-node/: Cargo.toml  README.md  index.d.ts  index.js  package.json
v3/crates/swarmvector/crates/swarmvector-graph-transformer-node/src/: lib.rs
v3/crates/swarmvector/crates/swarmvector-graph/benches/: graph_bench.rs  new_capabilities_bench.rs  typed_graph_bench.rs
v3/crates/swarmvector/crates/swarmvector-math/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-math/src/: lib.rs  (+1 more)
v3/crates/swarmvector/crates/swarmvector-metrics/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-node/: Cargo.toml  PHASE5_STATUS.md  README.md  package.json
v3/crates/swarmvector/crates/swarmvector-raft/: README.md
v3/crates/swarmvector/crates/swarmvector-replication/: README.md
v3/crates/swarmvector/crates/swarmvector-router-core/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-router-ffi/: Cargo.toml  README.md  package.json
v3/crates/swarmvector/crates/swarmvector-tiny-dancer-core/: Cargo.toml  README.md
v3/crates/swarmvector/crates/swarmvector-tiny-dancer-node/: Cargo.toml  README.md  package.json
(+6171 files in other folders)
