[workspace]
resolver = "2"
members = [
    "crates/swarmvector-node",
    "crates/swarmvector-core",
    "crates/swarmvector-collections",
    "crates/swarmvector-filter",
    "crates/swarmvector-metrics",
    "crates/sona",
    "crates/swarmvector-router-ffi",
    "crates/swarmvector-router-core",
    "crates/swarmvector-attention",
    "crates/swarmvector-attention-node",
    "crates/swarmvector-math",
    "crates/swarmvector-diskann",
    "crates/swarmvector-diskann-node",
    "crates/swarmvector-tiny-dancer-core",
    "crates/swarmvector-tiny-dancer-node",
    "crates/swarmvector-gnn",
    "crates/swarmvector-gnn-node",
    "crates/swarmvector-cluster",
    "crates/swarmvector-graph",
    "crates/swarmvector-graph-node",
    "crates/swarmvector-raft",
    "crates/swarmvector-replication",
    "crates/swarmvector-graph-transformer-node",
]

[workspace.lints.clippy]
unused_unit = "allow"

[workspace.package]
version = "2.2.3"
edition = "2021"
rust-version = "1.77"
license = "MIT"
authors = ["Swarmvector Team"]
repository = "https://github.com/ruvnet/swarmvector"

[workspace.dependencies]
# Core functionality
redb = "2.1"
memmap2 = "0.9"
hnsw_rs = "0.3"
simsimd = "5.9"
rayon = "1.10"
crossbeam = "0.8"

# Serialization
rkyv = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Node.js bindings
napi = { version = "2.16", default-features = false, features = ["napi9", "async", "tokio_rt"] }
napi-derive = "2.16"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Worker", "MessagePort", "console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

# Async runtime
tokio = { version = "1.41", features = ["rt-multi-thread", "sync", "macros"] }
futures = "0.3"

# Error handling and utilities
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Math and numerics
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
ndarray = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde", "js"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
indicatif = "0.17"
console = "0.15"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
mockall = "0.13"

# Formal verification
lean-agentic = "=0.1.0"

# Performance
dashmap = "6.1"
parking_lot = "0.12"
once_cell = "1.20"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "unwind"

[profile.bench]
inherits = "release"
debug = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]

# Patch hnsw_rs to use rand 0.8 instead of 0.9 for WASM compatibility
# This resolves the getrandom version conflict (0.2 vs 0.3)
[patch.crates-io]
hnsw_rs = { path = "./patches/hnsw_rs" }
