[package]
name = "rvf-index"
version = "0.2.0"
edition = "2021"
description = "SwarmVector Format progressive HNSW indexing with Layer A/B/C tiered search"
license = "MIT OR Apache-2.0"
repository = "the upstream project (see NOTICE)"
homepage = "the upstream project (see NOTICE)"
readme = "README.md"
categories = ["algorithms", "data-structures"]
keywords = ["vector", "hnsw", "nearest-neighbor", "indexing", "rvf"]
rust-version = "1.87"

[features]
default = ["std"]
std = []
simd = []

[dependencies]
# rvf-types dependency will be re-enabled once rvf-types stabilizes.
# For now, rvf-index defines its own local types.

[dev-dependencies]
rand = "0.8"
