[package]
name = "rufvector-filter"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Advanced metadata filtering for Rufvector vector search"

[dependencies]
rufvector-core = { version = "2.0.2", path = "../rufvector-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
dashmap = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
ordered-float = "4.5"
