[package]
name = "rufvector-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "README.md"
description = "Prometheus-compatible metrics collection for Rufvector vector databases"

[dependencies]
prometheus = "0.14"
lazy_static = "1.5"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
