[package]
name = "swarmvector-diskann-node"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "NAPI-RS bindings for swarmvector-diskann"

[lib]
crate-type = ["cdylib"]

[dependencies]
swarmvector-diskann = { path = "../swarmvector-diskann" }
napi = { workspace = true }
napi-derive = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
parking_lot = "0.12"

[build-dependencies]
napi-build = "2.1"
